--- a/s21_containers/Makefile
+++ b/s21_containers/Makefile
@@ -1,55 +1,61 @@
-# Variables
+# Компилятор и флаги
 CXX = g++
-CXXFLAGS = -std=c++17 -Wall -Wextra -I$(GTEST_DIR)/include
-AR = ar
-ARFLAGS = rcs
-TARGET = main
-TEST_TARGET = run_tests
+CXXFLAGS = -std=c++11 -Wall -Wextra -Ilist
+
+# Путь к библиотеке и объектным файлам
+LIB_DIR = lib
+OBJ_DIR = obj
+
+# Имена файлов
 LIB_NAME = containers.a
+SRC_DIR = list
+SRC_FILES = $(SRC_DIR)/list.cpp $(SRC_DIR)/list_tests.cpp $(SRC_DIR)/main.cpp
+OBJ_FILES = $(SRC_FILES:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
+TEST_EXEC = test_exec
+MAIN_EXEC = main_exec
 
-# Directories
-SRC_DIR = .
-BUILD_DIR = build
-GTEST_DIR = /usr/src/gtest
+# Цели makefile
+.PHONY: all build test style main clean
 
-# Source files
-SRCS = $(wildcard $(SRC_DIR)/*.cpp)
-OBJS = $(patsubst $(SRC_DIR)/%.cpp, $(BUILD_DIR)/%.o, $(SRCS))
+all: clean build test
 
-# Object files
-LIB_OBJS = $(BUILD_DIR)/list.o
-TEST_OBJS = $(BUILD_DIR)/tests.o
-MAIN_OBJS = $(BUILD_DIR)/main.o
+# Стадия build - компиляция библиотеки
+build: $(LIB_DIR)/$(LIB_NAME)
 
-# Targets
-.PHONY: all clean format library tests main
+$(LIB_DIR)/$(LIB_NAME): $(OBJ_DIR)/list.o
+	@mkdir -p $(LIB_DIR)
+	ar rcs $@ $^
 
-all: library tests main
-
-library: $(LIB_NAME)
-
-tests: $(TEST_TARGET)
-
-main: $(TARGET)
-
-$(TARGET): $(MAIN_OBJS) $(LIB_NAME)
-	$(CXX) $(CXXFLAGS) -o $@ $(MAIN_OBJS) $(LIB_NAME)
-
-$(TEST_TARGET): $(TEST_OBJS) $(LIB_NAME) $(GTEST_DIR)/gtest-all.o
-	$(CXX) $(CXXFLAGS) -o $@ $(TEST_OBJS) $(LIB_NAME) $(GTEST_DIR)/gtest-all.o -lpthread
-	./$(TEST_TARGET)
-
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
-	@mkdir -p $(BUILD_DIR)
+$(OBJ_DIR)/list.o: $(SRC_DIR)/list.cpp $(SRC_DIR)/list.h
+	@mkdir -p $(OBJ_DIR)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(LIB_NAME): $(LIB_OBJS)
-	$(AR) $(ARFLAGS) $@ $^
+# Стадия test - компиляция и запуск тестов
+test: $(TEST_EXEC)
+	./$(TEST_EXEC)
 
-format:
-	clang-format -i $(SRCS)
+$(TEST_EXEC): $(OBJ_DIR)/list_tests.o $(LIB_DIR)/$(LIB_NAME)
+	$(CXX) $(CXXFLAGS) $^ -lgtest -lgtest_main -pthread -o $@
 
+$(OBJ_DIR)/list_tests.o: $(SRC_DIR)/list_tests.cpp $(SRC_DIR)/list.h
+	@mkdir -p $(OBJ_DIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+# Стадия main - компиляция и запуск main.cpp
+main: $(MAIN_EXEC)
+	./$(MAIN_EXEC)
+
+$(MAIN_EXEC): $(OBJ_DIR)/main.o $(LIB_DIR)/$(LIB_NAME)
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
+$(OBJ_DIR)/main.o: $(SRC_DIR)/main.cpp $(SRC_DIR)/list.h
+	@mkdir -p $(OBJ_DIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+# Стадия style - форматирование кода
+style:
+	clang-format -i $(SRC_DIR)/*.cpp $(SRC_DIR)/*.h
+
+# Очистка скомпилированных файлов
 clean:
-	rm -rf $(BUILD_DIR) $(TARGET) $(LIB_NAME) $(TEST_TARGET)
-
-.PHONY: clean all format
+	rm -rf $(OBJ_DIR) $(LIB_DIR) $(TEST_EXEC) $(MAIN_EXEC)
