--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(s21_containers)
 
 add_executable(s21_containers
-        s21_containers/list.cpp
-        s21_containers/list.h
-        s21_containers/main.cpp)
+        s21_containers/list/list.cpp
+        s21_containers/list/list.h
+        s21_containers/tests.cpp
+        s21_containers/vector/vector.cpp
+s21_containers/stack/stack.h
+s21_containers/queue/queue.h)
